--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -7,7 +7,7 @@
   <meta content="width=device-width,initial-scale=1,minimal-ui" name="viewport">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic|Material+Icons">
 
-  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <!----link rel="icon" href="<%= BASE_URL %>favicon.ico"-->
   <title>ui</title>
 </head>
 
@@ -15,7 +15,7 @@
   <noscript>
     <strong>We're sorry but ui doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
   </noscript>
-   
+
   <div id="app"></div>
   <!-- built files will be auto injected -->
 </body>
