--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta content="width=device-width,initial-scale=1,minimal-ui" name="viewport">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic|Material+Icons">
+  <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 
   <!----link rel="icon" href="<%= BASE_URL %>favicon.ico"-->
   <title>ui</title>
